--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.4.2
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.20.4
+version: 0.20.5
 icon: https://raw.githubusercontent.com/argoproj/argo-workflows/master/docs/assets/argo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -13,4 +13,4 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: Enable to set different imagePullPolicy for mainContainer and executor"
+    - "[Fixed]: Removed invalid rbac block from configmap"
