fix(repo-server): Increase default repo server memory and cpu

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1511,11 +1511,11 @@ repoServer:
   # -- Resource limits and requests for the repo server pods
   resources:
     limits:
-      cpu: 50m
-      memory: 128Mi
+      cpu: 500m
+      memory: 2Gi
     requests:
-      cpu: 10m
-      memory: 64Mi
+      cpu: 500m
+      memory: 2Gi
 
   ## Repo server service configuration
   service:
