fix(argo-cd): Type conversion for ConfigMaps values
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
@@ -12,5 +12,5 @@ metadata:
     {{- end }}
   {{- end }}
 data:
-  {{- include "argo-cd.config.cm" . | nindent 2 }}
+  {{- include "argo-cd.config.cm" . | trim | nindent 2 }}
 {{- end }}
