--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,4 +23,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: Don't install CRDs for disabled components"
+    - "[Fixed]: Update network policy to fix prometheus scraping for argocd-application-controller"
