--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.5.3
 kubeVersion: ">=1.22.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.14.3
+version: 5.14.4
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -23,4 +23,7 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: Update to app version 2.5.3"
+    - "[Changed]: ApplicationSet now automatically detects leader election"
+    - "[Changed]: Simplified ApplicationSet RBAC rules"
+    - "[Removed]: Configuration option applicationset.args.debug"
+    - "[Removed]: Configuration option applicationset.args.enableLeaderElection"
