feat(config): Add cloneset rbac + inclusion

--- a/charts/argo-cd/templates/argocd-application-controller/coreweave-role.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/coreweave-role.yaml
@@ -238,3 +238,9 @@ rules:
       - xgboostjobs/status
     verbs:
       - '*'
+  - apiGroups:
+      - apps.kruise.io
+    resources:
+      - clonesets
+    verbs:
+      - '*'
