--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -327,6 +327,8 @@ spec:
         volumeMounts:
           - name: extensions
             mountPath: /tmp/extensions/
+          - name: tmp
+            mountPath: /tmp
       {{- end }}
       {{- with .Values.server.nodeSelector }}
       nodeSelector:
