fix(argo-cd): Add missing applicaton & events create ClusterRole permissions to argo-cd-server
Signed-off-by: Nick Fisher <nxf5025@gmail.com>

--- a/charts/argo-cd/templates/argocd-server/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-server/clusterrole.yaml
@@ -20,6 +20,7 @@ rules:
       - events
     verbs:
       - list
+      - create
   - apiGroups:
       - ""
     resources:
@@ -43,5 +44,6 @@ rules:
       - get
       - list
       - update
+      - create
       - watch
 {{- end }}
