fix(argo-cd): Use raw json for cluster credentials for Vault compatibility
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -26,6 +26,5 @@ stringData:
   clusterResources: {{ .clusterResources | quote }}
     {{- end }}
   {{- end }}
-  config: |
-    {{- required "A valid .Values.configs.clusterCredentials[].config entry is required!" .config | toPrettyJson | nindent 4 }}
+  config: {{ required "A valid .Values.configs.clusterCredentials[].config entry is required!" .config | toRawJson }}
 {{- end }}
