fix(argo-cd): Cluster credentials config should be a string
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -26,5 +26,6 @@ stringData:
   clusterResources: {{ .clusterResources | quote }}
     {{- end }}
   {{- end }}
-  config: {{ required "A valid .Values.configs.clusterCredentials[].config entry is required!" .config | toRawJson }}
+  config: |
+    {{- required "A valid .Values.configs.clusterCredentials[].config entry is required!" .config | toRawJson | nindent 4 }}
 {{- end }}
