fix(argo-workflows): Added missing attribute for sso Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -135,6 +135,10 @@ data:
         name: {{ .clientSecret.name }}
         key: {{ .clientSecret.key }}
       redirectUrl: {{ .redirectUrl }}
+      {{- with .rbac }}
+      rbac:
+        enabled: {{ .enabled }}
+      {{- end }}
       {{- if .scopes }}
       scopes: {{ toYaml .scopes | nindent 8 }}
       {{- end }}
