--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -97,6 +97,9 @@ configs:
 
 ## Argo Events controller
 controller:
+  # -- Install Argo Events controller
+  install: true
+
   # -- Argo Events controller name string
   name: controller-manager
 
