--- a/charts/argo-events/templates/argo-events-controller/config.yaml
+++ b/charts/argo-events/templates/argo-events-controller/config.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.controller.install }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -40,3 +41,4 @@ data:
           startCommand: {{ .startCommand }}
         {{- end }}
       {{- end }}
+{{- end }}
