--- a/charts/argo-events/templates/argo-events-controller/deployment.yaml
+++ b/charts/argo-events/templates/argo-events-controller/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.controller.install }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -135,3 +136,4 @@ spec:
       {{- with .Values.controller.volumes }}
         {{- toYaml . | nindent 6 }}
       {{- end }}
+{{- end }}
