--- a/charts/argo-events/templates/argo-events-controller/service.yaml
+++ b/charts/argo-events/templates/argo-events-controller/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.controller.install }}
 {{- if .Values.controller.metrics.enabled }}
 apiVersion: v1
 kind: Service
@@ -22,4 +23,5 @@ spec:
     targetPort: metrics
   selector:
     {{- include "argo-events.selectorLabels" (dict "context" . "name" .Values.controller.name) | nindent 4 }}
+{{- end }}
 {{- end }}
