--- a/charts/argo-events/templates/argo-events-controller/serviceaccount.yaml
+++ b/charts/argo-events/templates/argo-events-controller/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.controller.install }}
 {{- if .Values.controller.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
@@ -12,4 +13,5 @@ metadata:
   {{- end }}
   labels:
     {{- include "argo-events.labels" (dict "context" . "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
+{{- end }}
 {{- end }}
