--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,4 +23,5 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: Cluster credentials JSON config must be always converted to the string"
+    - "[Add]: Support to deploy argocd-repo-server as a StatefulSet"
+    - "[Add]: Creation of PVC for argocd-repo-server"
