set chart default values
Signed-off-by: arielly-parussulo <arielly.parussulo@quintoandar.com.br>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1952,7 +1952,7 @@ repoServer:
   #    emptyDir: {}
 
   # deploy argocd-repo-server as a statefulset (in this case it is mandatory to have a service account)
-  enableStatefulSet: true
+  enableStatefulSet: false
 
   # create a list of persistent volumes to be created with your deployment or statefulset
   volumeClaimTemplates: {}
