use square bracket for array
Signed-off-by: emmayylu <44856279+emmayylu@users.noreply.github.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -71,7 +71,7 @@ controller:
     # -- Adds Role and RoleBinding for the controller.
     create: true
     # -- Allows controller to get, list, abd watch certain k8s secrets
-    secretWhitelist: {}
+    secretWhitelist: []
 
   # -- Limits the maximum number of incomplete workflows in a namespace
   namespaceParallelism:
