fix typo and update readme
Signed-off-by: emmayylu <44856279+emmayylu@users.noreply.github.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -70,7 +70,7 @@ controller:
   rbac:
     # -- Adds Role and RoleBinding for the controller.
     create: true
-    # -- Allows controller to get, list, abd watch certain k8s secrets
+    # -- Allows controller to get, list, and watch certain k8s secrets
     secretWhitelist: []
 
   # -- Limits the maximum number of incomplete workflows in a namespace
