--- a/charts/argo-workflows/templates/controller/workflow-sa.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-sa.yaml
@@ -7,7 +7,7 @@ metadata:
   name: {{ $.Values.workflow.serviceAccount.name }}
   labels:
     {{- include "argo-workflows.labels" (dict "context" $ "component" $.Values.controller.name "name" $.Values.controller.name) | nindent 4 }}
-  {{- with .Values.workflow.serviceAccount.labels  }}
+  {{- with $.Values.workflow.serviceAccount.labels  }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
     {{- with $namespace }}
