chore(argo-workflows): Support workflow retention Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -167,3 +167,6 @@ data:
     {{- with .Values.controller.navColor }}
     navColor: {{ . }}
     {{- end }}
+    {{- with .Values.controller.retentionPolicy }}
+    retentionPolicy: {{- toYaml . | nindent 6 }}
+    {{- end }}
