feat: Add support for workloadspread openkruise CRD (#18)
* feat(openkruise): Add support for workload spread in argo-cd

* fix: Bump Chart  version

--- a/charts/argo-cd/templates/argocd-application-controller/coreweave-role.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/coreweave-role.yaml
@@ -242,5 +242,7 @@ rules:
       - apps.kruise.io
     resources:
       - clonesets
+      - broadcastjobs
+      - workloadspreads
     verbs:
       - '*'
