feat(argo-cd): Add ability to annotate Deployments and StatefulSets (#1608)
* feat(argo-cd): Add ability to annotate Deployments and StatefulSets

Signed-off-by: John Stewart <jstewart@rentpath.com>

* fix: Controller and AppSet controller was mixed

Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

Signed-off-by: John Stewart <jstewart@rentpath.com>
Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>
Co-authored-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -68,6 +68,12 @@ global:
     # -- Set the global logging level. One of: `debug`, `info`, `warn` or `error`
     level: info
 
+  # -- Annotations for the all deployed Statefulsets
+  statefulsetAnnotations: {}
+
+  # -- Annotations for the all deployed Deployments
+  deploymentAnnotations: {}
+
   # -- Annotations for the all deployed pods
   podAnnotations: {}
 
@@ -540,6 +546,9 @@ controller:
   # - secretRef:
   #     name: secret-name
 
+  # -- Annotations for the application controller StatefulSet
+  statefulsetAnnotations: {}
+
   # -- Annotations to be added to application controller pods
   podAnnotations: {}
 
@@ -846,6 +855,9 @@ dex:
     # -- Certificate data. Must contain SANs of Dex service (ie: argocd-dex-server, argocd-dex-server.argo-cd.svc)
     crt: ''
 
+  # -- Annotations to be added to the Dex server Deployment
+  deploymentAnnotations: {}
+
   # -- Annotations to be added to the Dex server pods
   podAnnotations: {}
 
@@ -1028,6 +1040,9 @@ redis:
   #     name: config-map-name
   # - secretRef:
   #     name: secret-name
+
+  # -- Annotations to be added to the Redis server Deployment
+  deploymentAnnotations: {}
 
   # -- Annotations to be added to the Redis server pods
   podAnnotations: {}
@@ -1342,6 +1357,9 @@ server:
   # -- Argo CD server log level. One of: `debug`, `info`, `warn` or `error`
   # @default -- `""` (defaults to global.logging.level)
   # logLevel: ""
+
+  # -- Annotations to be added to server Deployment
+  deploymentAnnotations: {}
 
   # -- Annotations to be added to server pods
   podAnnotations: {}
@@ -1898,6 +1916,9 @@ repoServer:
   # @default -- `""` (defaults to global.logging.format)
   # logLevel: ""
 
+  # -- Annotations to be added to repo server Deployment
+  deploymentAnnotations: {}
+
   # -- Annotations to be added to repo server pods
   podAnnotations: {}
 
@@ -2227,6 +2248,9 @@ applicationSet:
     # If not set and create is true, a name is generated using the fullname template
     name: ""
 
+  # -- Annotations to be added to ApplicationSet controller Deployment
+  deploymentAnnotations: {}
+
   # -- Annotations for the controller pods
   podAnnotations: {}
 
@@ -2516,6 +2540,9 @@ notifications:
   notifiers: {}
     # service.slack: |
     #   token: $slack-token
+
+  # -- Annotations to be applied to the notifications controller Deployment
+  deploymentAnnotations: {}
 
   # -- Annotations to be applied to the controller Pods
   podAnnotations: {}
