--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.5.3
 kubeVersion: ">=1.22.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.15.2
+version: 5.16.0
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -23,7 +23,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: ApplicationSet now automatically detects leader election"
-    - "[Changed]: Simplified ApplicationSet RBAC rules"
-    - "[Removed]: Configuration option applicationset.args.debug"
-    - "[Removed]: Configuration option applicationset.args.enableLeaderElection"
+    - "[Added]: Ability to annotate Deployment and Statefulset objects for all components"
