[argo-rollouts] add traefikservices resource in role
Signed-off-by: juan ramino <juan.ramino@gmail.com>

--- a/charts/argo-rollouts/templates/controller/role.yaml
+++ b/charts/argo-rollouts/templates/controller/role.yaml
@@ -150,4 +150,15 @@ rules:
   - get
   - update
   - patch
+# traefikservices needed for using trafficRouting with traefik
+- apiGroups:
+  - traefik.containo.us
+  resources:
+  - traefikservices
+  verbs:
+  - list
+  - watch
+  - get
+  - update
+  - patch
 {{- end }}
