add support for configuring volumes in the executor
Signed-off-by: Pasquale D'Agostino <2095574+elauqsap@users.noreply.github.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -325,6 +325,10 @@ executor:
   env: []
   # -- sets security context for the executor container
   securityContext: {}
+  # -- Additional volume mounts for the executor container.
+  volumeMounts: []
+  # -- Additional volumes for the executor.
+  volumes: []
 
 server:
   # -- Deploy the Argo Server
