--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.4.4
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.22.0
+version: 0.22.1
 icon: https://raw.githubusercontent.com/argoproj/argo-workflows/master/docs/assets/argo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -14,3 +14,4 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - "[Fixed]: Missing Artifact GC permissions"
+    - "[Added]: volumeMounts & volumes for executor container"
