--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -38,7 +38,7 @@ data:
       securityContext: {{- toYaml . | nindent 8 }}
       {{- end }}
     {{- end }}
-    {{- if or .Values.executor.resources .Values.executor.env .Values.executor.securityContext}}
+    {{- if or .Values.executor.resources .Values.executor.env .Values.executor.securityContext .Values.executor.volumeMounts .Values.executor.volumes}}
     executor:
       imagePullPolicy: {{ default (.Values.images.pullPolicy) .Values.executor.image.pullPolicy }}
       {{- with .Values.executor.resources }}
@@ -49,6 +49,12 @@ data:
       {{- end }}
       {{- with .Values.executor.securityContext }}
       securityContext: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.executor.volumeMounts }}
+      volumeMounts: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.executor.volumes }}
+      volumes: {{- toYaml . | nindent 8 }}
       {{- end }}
     {{- end }}
     {{- if .Values.useDefaultArtifactRepo }}
