feat(argocd-apps): Support sourceNamespaces for AppProject Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -74,6 +74,8 @@ projects: []
 #     manualSync: true
 #   signatureKeys:
 #   - keyID: ABCDEF1234567890
+#   sourceNamespaces:
+#   - argocd
 
 # -- Deploy Argo CD ApplicationSets within this helm release
 # @default -- `[]` (See [values.yaml])
