feat(argo-cd): Add annotations to PrometheusRule
Signed-off-by: Jellyfrog <Jellyfrog@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -705,6 +705,7 @@ controller:
     #     prometheus: kube-prometheus
     #   namespace: monitoring
     #   additionalLabels: {}
+    #   annotations: {}
 
   ## Enable if you would like to grant rights to Argo CD to deploy to the local Kubernetes cluster.
   clusterAdminAccess:
