feat(argo-workflows): Support images property to workflow-controller-configmap for emissary executor Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -170,3 +170,6 @@ data:
     {{- with .Values.controller.retentionPolicy }}
     retentionPolicy: {{- toYaml . | nindent 6 }}
     {{- end }}
+    {{- with .Values.emissaryExecutor.images }}
+    images: {{- toYaml . | nindent 6 }}
+    {{- end }}
