chore(argo-workflows): adopt concise name Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -631,7 +631,7 @@ customArtifactRepository: {}
 #       name: artifactory-creds
 #       key: password
 
-emissaryExecutor:
+emissary:
   # -- The command/args for each image on workflow, needed when the command is not specified and the emissary executor is used.
   ## See more: https://argoproj.github.io/argo-workflows/workflow-executors/#emissary-emissary
   images: []
