--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -170,6 +170,6 @@ data:
     {{- with .Values.controller.retentionPolicy }}
     retentionPolicy: {{- toYaml . | nindent 6 }}
     {{- end }}
-    {{- with .Values.emissaryExecutor.images }}
+    {{- with .Values.emissary.images }}
     images: {{- toYaml . | nindent 6 }}
     {{- end }}
